Add options to set services hostnames via an env-var ready for ECS

--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -25,7 +25,7 @@ server {
   # Read-Eval-Print-Loop service (uses web-sockets)
 
   location /repler/ {
-    proxy_pass http://repler:${CYBER_DOJO_REPLER_PORT}/repl/;
+    proxy_pass http://${CYBER_DOJO_REPLER_HOSTNAME}:${CYBER_DOJO_REPLER_PORT}/repl/;
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection $connection_upgrade;
@@ -44,47 +44,47 @@ server {
 
   location /creator/ {
     rewrite ^/creator/(.*) /$1 break;
-    proxy_pass http://creator:${CYBER_DOJO_CREATOR_PORT};
+    proxy_pass http://${CYBER_DOJO_CREATOR_HOSTNAME}:${CYBER_DOJO_CREATOR_PORT};
   }
 
   location /saver/ {
     rewrite ^/saver/(.*) /$1 break;
-    proxy_pass http://saver:${CYBER_DOJO_SAVER_PORT};
+    proxy_pass http://${CYBER_DOJO_SAVER_HOSTNAME}:${CYBER_DOJO_SAVER_PORT};
   }
 
   location /dashboard/ {
     rewrite ^/dashboard/(.*) /$1 break;
-    proxy_pass http://dashboard:${CYBER_DOJO_DASHBOARD_PORT};
+    proxy_pass http://${CYBER_DOJO_DASHBOARD_HOSTNAME}:${CYBER_DOJO_DASHBOARD_PORT};
   }
 
   location /differ/ {
     rewrite ^/differ/(.*) /$1 break;
-    proxy_pass http://differ:${CYBER_DOJO_DIFFER_PORT};
+    proxy_pass http://${CYBER_DOJO_DIFFER_HOSTNAME}:${CYBER_DOJO_DIFFER_PORT};
   }
 
   location /custom-start-points/ {
     rewrite ^/custom-start-points/(.*) /$1 break;
-    proxy_pass http://custom-start-points:${CYBER_DOJO_CUSTOM_START_POINTS_PORT};
+    proxy_pass http://${CYBER_DOJO_CUSTOM_START_POINTS_HOSTNAME}:${CYBER_DOJO_CUSTOM_START_POINTS_PORT};
   }
   
   location /exercises-start-points/ {
     rewrite ^/exercises-start-points/(.*) /$1 break;
-    proxy_pass http://exercises-start-points:${CYBER_DOJO_EXERCISES_START_POINTS_PORT};
+    proxy_pass http://${CYBER_DOJO_EXERCISES_START_POINTS_HOSTNAME}:${CYBER_DOJO_EXERCISES_START_POINTS_PORT};
   }
   
   location /languages-start-points/ {
     rewrite ^/languages-start-points/(.*) /$1 break;
-    proxy_pass http://languages-start-points:${CYBER_DOJO_LANGUAGES_START_POINTS_PORT};
+    proxy_pass http://${CYBER_DOJO_LANGUAGES_START_POINTS_HOSTNAME}:${CYBER_DOJO_LANGUAGES_START_POINTS_PORT};
   }
 
   location /shas {
     rewrite ^/shas/(.*) /$1 break;
-    proxy_pass http://shas:${CYBER_DOJO_SHAS_PORT};
+    proxy_pass http://${CYBER_DOJO_SHAS_HOSTNAME}:${CYBER_DOJO_SHAS_PORT};
   }
 
   location /runner/sha {
     rewrite ^/runner/sha /sha break;
-    proxy_pass http://runner:${CYBER_DOJO_RUNNER_PORT};
+    proxy_pass http://${CYBER_DOJO_RUNNER_HOSTNAME}:${CYBER_DOJO_RUNNER_PORT};
   }
 
   #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
@@ -108,7 +108,7 @@ server {
 
     # Try to serve static files from nginx.
     if (!-f $request_filename) {
-      proxy_pass http://web:${CYBER_DOJO_WEB_PORT};
+      proxy_pass http://${CYBER_DOJO_WEB_HOSTNAME}:${CYBER_DOJO_WEB_PORT};
       break;
     }
   }
