add terraform specs for the service deployment

--- a/ports.docker.env
+++ b/ports.docker.env
@@ -10,14 +10,14 @@ CYBER_DOJO_RUNNER_PORT=4597
 CYBER_DOJO_SAVER_PORT=4537
 CYBER_DOJO_SHAS_PORT=4522
 CYBER_DOJO_WEB_PORT=3000
-CYBER_DOJO_CUSTOM_START_POINTS_HOSTNAME=custom-start-points
-CYBER_DOJO_EXERCISES_START_POINTS_HOSTNAME=exercises-start-points
-CYBER_DOJO_LANGUAGES_START_POINTS_HOSTNAME=languages-start-points
-CYBER_DOJO_CREATOR_HOSTNAME=creator
-CYBER_DOJO_DASHBOARD_HOSTNAME=dashboard
-CYBER_DOJO_DIFFER_HOSTNAME=differ
-CYBER_DOJO_REPLER_HOSTNAME=repler
-CYBER_DOJO_RUNNER_HOSTNAME=runner
-CYBER_DOJO_SAVER_HOSTNAME=saver
-CYBER_DOJO_SHAS_HOSTNAME=shas
-CYBER_DOJO_WEB_HOSTNAME=web
+CYBER_DOJO_CUSTOM_START_POINTS_HOSTNAME=custom-start-points.cyber-dojo.eu-central-1
+CYBER_DOJO_EXERCISES_START_POINTS_HOSTNAME=exercises-start-points.cyber-dojo.eu-central-1
+CYBER_DOJO_LANGUAGES_START_POINTS_HOSTNAME=languages-start-points.cyber-dojo.eu-central-1
+CYBER_DOJO_CREATOR_HOSTNAME=creator.cyber-dojo.eu-central-1
+CYBER_DOJO_DASHBOARD_HOSTNAME=dashboard.cyber-dojo.eu-central-1
+CYBER_DOJO_DIFFER_HOSTNAME=differ.cyber-dojo.eu-central-1
+CYBER_DOJO_REPLER_HOSTNAME=repler.cyber-dojo.eu-central-1
+CYBER_DOJO_RUNNER_HOSTNAME=runner.cyber-dojo.eu-central-1
+CYBER_DOJO_SAVER_HOSTNAME=saver.cyber-dojo.eu-central-1
+CYBER_DOJO_SHAS_HOSTNAME=shas.cyber-dojo.eu-central-1
+CYBER_DOJO_WEB_HOSTNAME=web.cyber-dojo.eu-central-1
