--- a/ports.k8s.env
+++ b/ports.k8s.env
@@ -21,3 +21,4 @@ CYBER_DOJO_RUNNER_HOSTNAME=runner
 CYBER_DOJO_SAVER_HOSTNAME=saver
 CYBER_DOJO_SHAS_HOSTNAME=shas
 CYBER_DOJO_WEB_HOSTNAME=web
+NGINX_RESOLVER_IP=127.0.0.1
