--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,8 @@ jobs:
   build-test-push-dockerhub:
     needs: [pre-build]
     uses: cyber-dojo/reusable-actions-workflows/.github/workflows/build_test_push_dockerhub.yml@master
+    secrets:
+      MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
 
   build-push-ecr:
     needs: [pre-build, build-test-push-dockerhub]
