--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,9 @@ jobs:
       MERKELY_API_TOKEN: ${{ secrets.MERKELY_API_TOKEN }}
       DOCKER_PASS: ${{ secrets.DOCKER_PASS }}
       DOCKER_USER: ${{ secrets.DOCKER_USER }}
+    with:
+      CIRCLE_BUILD_NUM: ${{github.run_number}}
+      CIRCLE_BUILD_URL: ${{github.server_url}}/${{github.repository}}/actions/runs/${{github.run_id}}
 
   build-push-ecr:
     needs: [pre-build, build-test-push-dockerhub]
