--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -59,6 +59,7 @@ server {
   set $languages_start_points_hostname ${CYBER_DOJO_LANGUAGES_START_POINTS_HOSTNAME};
   set $shas_hostname ${CYBER_DOJO_SHAS_HOSTNAME};
   set $runner_hostname ${CYBER_DOJO_RUNNER_HOSTNAME};
+  set $repler_hostname ${CYBER_DOJO_REPLER_HOSTNAME};
   set $web_hostname ${CYBER_DOJO_WEB_HOSTNAME};
 
   location /creator/ {
@@ -99,6 +100,11 @@ server {
   location /shas {
     rewrite ^/shas/(.*) /$1 break;
     proxy_pass http://$shas_hostname:${CYBER_DOJO_SHAS_PORT};
+  }
+
+  location /repler {
+    rewrite ^/repler/(.*) /$1 break;
+    proxy_pass http://$repler_hostname:${CYBER_DOJO_REPLER_PORT};
   }
 
   location /runner/sha {
